--- a/web/faq.html
+++ b/web/faq.html
@@ -27,20 +27,20 @@ permalink: "{{ page.filePathStem }}.html"
     &lt;dependency&gt;
       &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
       &lt;artifactId&gt;smile-core&lt;/artifactId&gt;
-      &lt;version&gt;2.2.2&lt;/version&gt;
+      &lt;version&gt;2.3.0&lt;/version&gt;
     &lt;/dependency&gt;
     </code></pre>
 
     <p>If you're using SBT, add the following line into your build file:</p>
 
     <pre><code>
-    libraryDependencies += "com.github.haifengl" % "smile-core" % "2.2.2"
+    libraryDependencies += "com.github.haifengl" % "smile-core" % "2.3.0"
     </code></pre>
 
     <p>For Scala API,</p>
 
     <pre><code>
-    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "2.2.2"
+    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "2.3.0"
     </code></pre>
 
     <p>To enable machine optimised matrix computation, the users should add
@@ -49,7 +49,7 @@ permalink: "{{ page.filePathStem }}.html"
     &lt;dependency&gt;
       &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
       &lt;artifactId&gt;smile-netlib&lt;/artifactId&gt;
-      &lt;version&gt;2.2.2&lt;/version&gt;
+      &lt;version&gt;2.3.0&lt;/version&gt;
     &lt;/dependency&gt;
     </code></pre>
     <p>and also make their machine-optimised libblas3 (CBLAS) and liblapack3 (Fortran)
@@ -152,16 +152,9 @@ permalink: "{{ page.filePathStem }}.html"
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val toy = read.csv("data/classification/toy/toy-train.txt", delimiter='\t', header=false)
-    val x = toy.select(1, 2).toArray
-    val y = toy.column(0).toIntArray
-
-    val canvas = ScatterPlot.plot(x, y, '*', Array(RED, BLUE))
-
-    val headless = new Headless(canvas)
-    headless.pack()
-    headless.setVisible(true)
-
-    canvas.save(new java.io.File("headless.png"))
+    val canvas = plot(toy, "V2", "V3", "V1", '.')
+    val image = canvas.toBufferedImage(400, 400)
+    javax.imageio.ImageIO.write(image, "png", new java.io.File("headless.png"))
     </code></pre>
             </div>
         </div>
@@ -174,17 +167,9 @@ permalink: "{{ page.filePathStem }}.html"
     import org.apache.commons.csv.CSVFormat;
 
     var toy = Read.csv("data/classification/toy/toy-train.txt", CSVFormat.DEFAULT.withDelimiter('\t'));
-    var x = toy.select(1, 2).toArray();
-    var y = toy.column(0).toIntArray();
-
-    Color[] colors = {Color.RED, Color.BLUE};
-    var canvas = ScatterPlot.plot(x, y, '*', colors);
-
-    var headless = new Headless(canvas);
-    headless.pack();
-    headless.setVisible(true);
-
-    canvas.save(new java.io.File("headless.png"));
+    var canvas = ScatterPlot.of(toy, "V2", "V3", "V1", '.').canvas();
+    var image = canvas.toBufferedImage(400, 400);
+    javax.imageio.ImageIO.write(image, "png", new java.io.File("headless.png"));
           </code></pre>
             </div>
         </div>
