--- a/web/index.html
+++ b/web/index.html
@@ -405,6 +405,7 @@ permalink: "{{ page.filePathStem }}.html"
       <ul class="nav nav-tabs">
         <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
         <li><a href="#java_1" data-toggle="tab">Java</a></li>
+        <li><a href="#kotlin_1" data-toggle="tab">Kotlin</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="scala_1">
@@ -425,6 +426,17 @@ println(s"OOB error = ${rf.error}")
 DataFrame iris = Read.arff("iris.arff");
 RandomForest rf = RandomForest.fit(Formula.lhs("class"), iris);
 System.out.format("OOB error = %.2f%n", rf.error());
+          </code></pre>
+          </div>
+          <div class="caption">Random Forest</div>
+        </div>
+        <div class="tab-pane" id="kotlin_1">
+          <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-kotlin"><code>
+val iris = read.arff("iris.arff")
+val rf = randomForest(Formula.lhs("class"), iris)
+println("OOB error = ${rf.error()}")
+
           </code></pre>
           </div>
           <div class="caption">Random Forest</div>
