--- a/web/faq.html
+++ b/web/faq.html
@@ -31,36 +31,32 @@ permalink: "{{ page.filePathStem }}.html"
     &lt;/dependency&gt;
     </code></pre>
 
-    <p>If you're using SBT, add the following line into your build file:</p>
+    <p>If you're using Gradle, add the following line into your build
+        file's <code>dependencies</code> section:</p>
+    <pre><code>
+    implementation("com.github.haifengl:smile-core:2.3.0")
+    </code></pre>
 
+    <p>If you're using SBT, add the following line into your build file:</p>
     <pre><code>
     libraryDependencies += "com.github.haifengl" % "smile-core" % "2.3.0"
     </code></pre>
 
     <p>For Scala API,</p>
-
     <pre><code>
     libraryDependencies += "com.github.haifengl" %% "smile-scala" % "2.3.0"
     </code></pre>
 
-    <p>To enable machine optimised matrix computation, the users should add
-        the dependency of smile-netlib:</p>
-    <pre><code>
-    &lt;dependency&gt;
-      &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
-      &lt;artifactId&gt;smile-netlib&lt;/artifactId&gt;
-      &lt;version&gt;2.3.0&lt;/version&gt;
-    &lt;/dependency&gt;
-    </code></pre>
-    <p>and also make their machine-optimised libblas3 (CBLAS) and liblapack3 (Fortran)
+    <p>To enable machine optimised matrix computation, the users should
+        make their machine-optimised libblas3 (CBLAS) and liblapack3 (Fortran)
         available as shared libraries at runtime. This module employs the highly efficient
         <a href="https://github.com/fommil/netlib-java#netlib-java">netlib-java</a>
         library.</p>
 
-    <h3>OS X</h3>
+    <h5>OS X</h5>
     <p>Apple OS X requires no further setup as it ships with the veclib framework.</p>
 
-    <h3>Linux</h3>
+    <h5>Linux</h5>
     <p>Generically-tuned ATLAS and OpenBLAS are available with most distributions
         and must be enabled explicitly using the package-manager. For example,</p>
 
@@ -76,7 +72,7 @@ permalink: "{{ page.filePathStem }}.html"
     you could also create symbolic links from libblas.so.3 and liblapack.so.3 to libmkl_rt.so
     or use Debian's alternatives system.</p>
 
-    <h3>Windows</h3>
+    <h5>Windows</h5>
     <p>The native_system builds expect to find libblas3.dll and liblapack3.dll
         on the %PATH% (or current working directory). Besides vendor-supplied
         implementations, OpenBLAS provide generically tuned binaries, and it
